--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,16 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.1'
+        classpath 'com.android.tools.build:gradle:4.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.google.gms:google-services:4.3.4"
+        classpath "org.jlleitschuh.gradle:ktlint-gradle:9.4.1"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -22,7 +26,10 @@ allprojects {
         jcenter()
 
     }
+    apply plugin: "org.jlleitschuh.gradle.ktlint"
 }
+
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
