--- a/.github/workflows/projemanag.yml
+++ b/.github/workflows/projemanag.yml
@@ -22,6 +22,8 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout the code
         uses: actions/checkout@v2
+        
+      - run: brew install gradle
       
       - name: Ktlint checkout
         uses: ./gradlew ktlintCheckout
