--- a/.github/workflows/projemanag.yml
+++ b/.github/workflows/projemanag.yml
@@ -23,5 +23,10 @@ jobs:
       - name: Checkout the code
         uses: actions/checkout@v2
       
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      
       - name: Ktlint checkout
         uses: ./gradlew ktlintCheckout
