--- a/.github/workflows/projemanag.yml
+++ b/.github/workflows/projemanag.yml
@@ -29,4 +29,4 @@ jobs:
           java-version: 1.8
       
       - name: Ktlint checkout
-        uses: ./gradlew ktlintCheckout
+        uses: ./gradlew ktlintCheck
