--- a/.github/workflows/projemanag.yml
+++ b/.github/workflows/projemanag.yml
@@ -13,10 +13,10 @@ jobs:
     name: Run ktlint
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - name: set up JDK 1.8
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
       - name: Ktlint
-        run: bash ./gradlew ktlint
+        run: ./gradlew ktlintCheck
