--- a/.github/workflows/ktlint.yml
+++ b/.github/workflows/ktlint.yml
@@ -15,15 +15,14 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  ktlint:
     name: Run ktlint
     runs-on: ubuntu-18.04
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Checkout the code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
       
       - name: set up JDK 1.8
         uses: actions/setup-java@v1
