--- a/.github/workflows/ktlint.yml
+++ b/.github/workflows/ktlint.yml
@@ -5,29 +5,22 @@ name: Ktlint
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
-  push:
-    branches: 
-      - 'master'
   pull_request:
-    branches: 
+    branches:
+      - 'master'
+  push:
+    branches:
       - 'master'
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   ktlint:
     name: Run ktlint
     runs-on: ubuntu-18.04
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      
       - name: set up JDK 1.8
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      
-      - name: Ktlint checkout
-        uses: ./gradlew ktlintCheck
+      - name: Ktlint
+        run: ./gradlew ktlintCheck
