--- a/.github/workflows/projemanag.yml
+++ b/.github/workflows/projemanag.yml
@@ -19,6 +19,7 @@ jobs:
         with:
           java-version: 1.8
       - name: Ktlint Check
+        continue-on-error: true
         run: ./gradlew ktlintCheck
         
       - name: Ktlint Format
